--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,16 @@
 
     <groupId>org.vendapues</groupId>
     <artifactId>components</artifactId>
-    <version>0.0.1-beta</version>
+    <version>0.0.4-beta</version>
+    <packaging>jar</packaging>
+
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub vendapues Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/vendapues/components</url>
+        </repository>
+    </distributionManagement>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
